* do not insert break opportunities into bare URL with `nobreak` role

Improvements::

* process `pre-wrap` role in text formatter
* drop support for the unmaintained payment font (`pf`) for use in font-based icons
* refactor formatted text transform to simplify how inner space is collapsed; verify only inner hard breaks are preserved

Bug Fixes::

* correctly map all icons from FontAwesome 4 (#2373)
* resolve remote image in document title or section title with autogenerated ID
* keep caret between items in menu macro with previous item if items wrap
* don't include children of section with empty title in TOC
* don't include children of section with empty title in outline
* only load Treetop runtime so it does not overload `require` method
* fix collation order of index terms that differ only in case
* don't crash if page background image value is empty (interpret as "none")
* prevent special character substitution from interfering with callouts in plain verbatim block (#2390)
* remove deprecated, undocumented `svg-font-family` theme key (the correct key is `svg-fallback-font-family`)
* alias `File.exists?` to `File.exist?` when loading RGhost optimizer to patch incompatibility when using Ruby 3.2

== 2.3.7 (2023-04-16) - @mojavelinux

Bug Fixes::

* don't crash if source block with custom subs is empty and source highlighter is enabled
* add workaround for JRuby on Windows when value of `imagesdir` attribute is absolute and contains non-ASCII characters

=== Details

{url-repo}/releases/tag/v2.3.7[git tag] | {url-repo}/compare/v2.3.6\...v2.3.7[full diff]

== 2.3.6 (2023-04-09) - @mojavelinux

Bug Fixes::

* rework `File.absolute_path?` patch so it returns correct response when running on JRuby

=== Details

{url-repo}/releases/tag/v2.3.6[git tag] | {url-repo}/compare/v2.3.5\...v2.3.6[full diff]

== 2.3.5 (2023-03-31) - @mojavelinux

Enhancements::

* add `callout-list-marker-font-color` theme key to control color of conum marker in callout list (#2402)
